Closed Bug 45350 Opened 24 years ago Closed 24 years ago

Tinderbox not displayed properly due to painting problems in rowspans

Categories

(Core :: Layout: Tables, defect, P2)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: devotip, Assigned: karnaze)

References

()

Details

(Whiteboard: [nsbeta3+])

Attachments

(4 files)

From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; Win98; en-US; m17) Gecko/20000712
BuildID:
2000071215

When loading the page it's not rendered properly. If you double click on the window top bar to
force a repaint without a reload the page is displayed properly

Reproducible: Always
Steps to Reproduce:
1.open
the attached page
2.scroll down the right scrollbar to see
3. double click the window top bar


Actual Results:  When loaded the page is garbled, it's ok after the repaint	

Expected Results:  same page
both time
Assignee: asa → karnaze
Status: UNCONFIRMED → NEW
Component: Browser-General → HTMLTables
Ever confirmed: true
QA Contact: doronr → desale
Confirmed with 071208 mozilla build on NT. setting status to NEW.  Over to HTML 
Tables.
The new provided testcase is probably small enought to be useful.
It has been verified with (win98 build 2000072904).
The repaint has to made by changing window insted of doubleclicking on title bar.
all.
nsbeta3, I cannot admin the tinderbox tree with mozilla
in it's current state.  Starred areas show up white,
and I can't click on the star/links there.
Keywords: nsbeta3
OS: Windows 98 → All
Hardware: PC → All
see also
bug 47115
bug 46970
*** Bug 47115 has been marked as a duplicate of this bug. ***
The incremental reflow from the image load seems to be destroying the
row-spanning nature of the cell.
Since resizing the window fixes it this problem it is not critical (reasonable
workaround). Adding relnote to keywords.
Keywords: relnote3
Whiteboard: [nsbeta3-]
QA Contact: desale → chrisd
Bug 49602 is the same problem but shows that controls do not paint correctly 
either. 

This is a more generalized problem of painting problems in rowspans and probably 
has to be fixed for beta3. Approving for nsbeta3+ since controls in rowspans 
appear to suffer as well as images.
Keywords: relnote3
Summary: Tinderbox not displayed properly → Tinderbox not displayed properly due to painting problems in rowspans
Whiteboard: [nsbeta3-] → [nsbeta3+]
*** Bug 49602 has been marked as a duplicate of this bug. ***
Priority: P3 → P2
Target Milestone: --- → M18
bug 49694 and bug 49631 are likely duplicates.
*** Bug 45818 has been marked as a duplicate of this bug. ***
Fixed.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Tested across platforms - verified fixed.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: