bug 45350 - correctly consider rowspan height in table row incremental reflow